MDEV-5291: Slave transaction retry on temporary error leaves dangling error in SHOW SLAVE STATUS

Make sure to clear the temporary error before the retry.